update: auth middleware
